NXP-24952: Cleanup / Format with java 11 capabilities